Delete operation: improperlyConfigured after delete
ImproperlyConfigured at /MyPage/post/delete/1
No URL to redirect to. Provide a success_url.
Request Method:	POST
Request URL:	http://127.0.0.1:8000/MyPage/post/delete/1
Django Version:	3.0
Exception Type:	ImproperlyConfigured
Exception Value:
No URL to redirect to. Provide a success_url.
Exception Location:	/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/lib/python3.7/site-packages/django/views/generic/edit.py in get_success_url, line 225
Python Executable:	/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/bin/python
Python Version:	3.7.3
Python Path:
['/Users/Simon/git/Connected',
 '/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/lib/python37.zip',
 '/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/lib/python3.7',
 '/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/lib/python3.7/lib-dynload',
 '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.7/lib/python3.7',
 '/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/lib/python3.7/site-packages']
Server time:	Sun, 22 Dec 2019 03:24:57 +0000

Environment:

Request Method: POST
Request URL: http://127.0.0.1:8000/MyPage/post/delete/1

Django Version: 3.0
Python Version: 3.7.3
Installed Applications:
['django.contrib.admin',
 'django.contrib.auth',
 'django.contrib.contenttypes',
 'django.contrib.sessions',
 'django.contrib.messages',
 'django.contrib.staticfiles',
 'MyPage',
 'imagekit']
Installed Middleware:
['django.middleware.security.SecurityMiddleware',
 'django.contrib.sessions.middleware.SessionMiddleware',
 'django.middleware.common.CommonMiddleware',
 'django.middleware.csrf.CsrfViewMiddleware',
 'django.contrib.auth.middleware.AuthenticationMiddleware',
 'django.contrib.messages.middleware.MessageMiddleware',
 'django.middleware.clickjacking.XFrameOptionsMiddleware']

Traceback (most recent call last):
  File "/Users/Simon/.local/share/virtualenvs/Connected-86_Ak3aF/lib/python3.7/si

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,5 +1,8 @@
+<!-- # 1. What is object here? -->
+<!-- DetailView returns self.object -->
 <div>
     <a href="{% url 'post_update' object.id %}">Update Post</a>    
+    <a href="{% url 'post_delete' object.id %}">Delete Post</a>    
 </div>
 
 <p> {{ object.title }} </p>
